# actix-test

./: Cargo.toml  README.md
scripts/: run-jaeger.sh
src/: main.rs  trace.rs  utils.rs
src/api/: auth.rs  distributed_tracing.rs  handlers.rs  mod.rs  models.rs  utils.rs  ws_handlers.rs
src/api/users/: handlers.rs
