[package]
name = "actix-test"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-ws = "0.3.0"
apistos = { version = "0.4.1", features = ["qs_query", "extras", "rapidoc", "redoc", "scalar", "swagger-ui"] }
futures-util = { version = "0.3.31", features = ["sink"] }
opentelemetry = "0.26.0"
opentelemetry-otlp = { version = "0.26.0", features = ["tonic"] }
opentelemetry-semantic-conventions = "0.26.0"
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio"] }
schemars = { package = "apistos-schemars", version = "0.8", features = [
    "chrono",
    "uuid1",
    "url",
    "rust_decimal",
] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.40"
tracing-actix-web = "0.7.13"
tracing-opentelemetry = "0.27.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
