[package]
name = "actix-test"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.8.2"
actix-web-opentelemetry = "0.19.0"
actix-ws = "0.3.0"
derive_more = { version = "1.0.0", features = ["full"] }
dotenv = "0.15.0"
futures-util = { version = "0.3.31", features = ["sink"] }
jsonwebtoken = "9.3.0"
opentelemetry = "0.26.0"
opentelemetry-otlp = { version = "0.26.0", features = ["tonic"] }
opentelemetry-semantic-conventions = "0.26.0"
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio"] }
rand = "0.8.5"
reqwest = "0.12.8"
reqwest-middleware = "0.3.3"
reqwest-tracing = { version = "0.5.3", features = ["opentelemetry_0_24"] }
rsa = "0.9.6"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.40"
tracing-actix-web = "0.7.13"
tracing-opentelemetry = "0.27.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
